--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: unity-scope-pinyinsearch
 Section: utils
 Priority: optional
 Maintainer: Aron Xu <happyaron@ubuntu.com>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), python3
 Standards-Version: 3.9.6
 Homepage: https://github.com/kroody/unity-scope-pinyinsearch
 
